chore: update runner dependencies

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,17 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            cmake \
+            llvm-16-dev \
+            libclang-16-dev \
+            clang-16 \
+            libcurl4-openssl-dev \
+            zlib1g-dev
+
       - name: Update Version
         run: |
           # Read current version
