feat: add .gitignore, update CMakeLists.txt for include directories, and enhance naming checks in magDragNamingCheck
- Added a .gitignore file to exclude the build directory.
- Updated CMakeLists.txt to include additional source directories and set include directories as SYSTEM.
- Removed the outdated INTEGRATION.md file.
- Enhanced readability checks in README.md to include more naming conventions.
- Improved magDragNamingCheck to enforce naming suffixes for class members, containers, enums, and typedefs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,11 @@ find_package(Clang REQUIRED CONFIG)
 message(STATUS "Using ClangConfig.cmake in: ${Clang_DIR}")
 
 # Set include directories
-include_directories(${LLVM_INCLUDE_DIRS})
-include_directories(${CLANG_INCLUDE_DIRS})
+include_directories(SYSTEM ${LLVM_INCLUDE_DIRS})
+include_directories(SYSTEM ${CLANG_INCLUDE_DIRS})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-# Set additional compiler flags
+# Add compile definitions from LLVM
 add_definitions(${LLVM_DEFINITIONS})
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
